# world_cup_2026_sweepstake

./: .gitignore  README.md  WorldCupSweep_Part1_Form.xlsx  WorldCupSweep_Part2_Form.xlsx  build.bat  pyproject.toml  requirements.txt
docs/: colleague_user_guide.md
src/sweepstake/: __main__.py  app.py  constants.py
src/sweepstake/data/: apifootball.py  manual.py  openfootball.py  team_names.py
src/sweepstake/parsers/: classifier.py  part1.py  part2.py
src/sweepstake/scoring/: engine.py  models.py
src/sweepstake/storage/: repository.py  schema.sql
src/sweepstake/web/: app.js  index.html  style.css
tests/: conftest.py  test_parsers.py  test_repository.py  test_scoring.py  test_team_names.py
