[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-sweepstake"
version = "1.0.0"
description = "2026 FIFA World Cup Sweepstake scorer"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=5.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "rapidfuzz>=3.6",
    "appdirs>=1.4",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Run tests with: py -3.14 -m pytest
